--- a/webview/package.json
+++ b/webview/package.json
@@ -12,9 +12,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start && npm run build-api",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "build-api": "cd /home/admin/Projects/NodeLink && flask run --no-debugger",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
