--- a/webview/package.json
+++ b/webview/package.json
@@ -12,7 +12,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run start-api && react-scripts start",
+    "start-api":"nohup python ../app.py & ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
